@@ -17,8 +17,9 @@ apt (0.8.15.1) unstable; urgency=low
     - Defaults is a vector of Pin not of PkgPin
     - ensure that only the first specific stanza for a package is used
     - save all stanzas which had no effect in Unmatched
+    - allow package:architecure in Package:
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 29 Jun 2011 23:21:12 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 30 Jun 2011 00:02:15 +0200
 
 apt (0.8.15) unstable; urgency=low
 
